force-app/main/default/objects/Song__c/fields/Chords__c.field-meta.xml
<CustomField>
    <fullName>Chords__c</fullName>
    <formula>IF(
    ISBLANK(Chords_Source_URL__c),
    &quot;Not Set&quot;,
    HYPERLINK(Chords_Source_URL__c, &quot;Chords&quot;, &quot;_blank&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chords</label>
    <type>Text</type>
</CustomField>