force-app/main/default/objects/Song__c/fields/Chords_Source_URL__c.field-meta.xml
<CustomField>
    <fullName>Chords_Source_URL__c</fullName>
    <label>Chords Source URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>