force-app/main/default/objects/Song__c/fields/Good_Cheat_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Good_Cheat_Sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Good Cheat Sheet</label>
    <type>Checkbox</type>
</CustomField>