force-app/main/default/objects/Song__c/fields/Lead_Singer__c.field-meta.xml
<CustomField>
    <fullName>Lead_Singer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Singer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Songs</relationshipName>
    <type>Lookup</type>
</CustomField>