force-app/main/default/objects/Song__c/fields/Lyrics__c.field-meta.xml
<CustomField>
    <fullName>Lyrics__c</fullName>
    <label>Lyrics</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>