force-app/main/default/objects/Song__c/fields/Number_of_Votes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Votes__c</fullName>
    <label>Number of Votes</label>
    <summaryForeignKey>Song_Vote__c.Song__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>