force-app/main/default/objects/Song__c/fields/Player_Link__c.field-meta.xml
<CustomField>
    <fullName>Player_Link__c</fullName>
    <formula>HYPERLINK(&apos;/apex/SongPdfViewerPage?id=&apos;+Id , &apos;Player&apos;, &apos;_blank&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Player Link</label>
    <type>Text</type>
</CustomField>