force-app/main/default/objects/Song__c/fields/Scroll_Source_File__c.field-meta.xml
<CustomField>
    <fullName>Scroll_Source_File__c</fullName>
    <label>Scroll Source File</label>
    <length>255</length>
    <type>Text</type>
</CustomField>