force-app/main/default/objects/Song__c/fields/Scroll_Speed__c.field-meta.xml
<CustomField>
    <fullName>Scroll_Speed__c</fullName>
    <label>Scroll Speed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>