force-app/main/default/objects/Song__c/fields/Song_on_Spotisfy__c.field-meta.xml
<CustomField>
    <fullName>Song_on_Spotisfy__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Spotify_Source_URL__c)), 
    HYPERLINK(Spotify_Source_URL__c, &quot;Open on Spotify&quot;, &quot;_blank&quot;), 
    &quot;Not set&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Song on Spotisfy</label>
    <type>Text</type>
</CustomField>