force-app/main/default/objects/Song__c/fields/Song_Zone_Speeds__c.field-meta.xml
<CustomField>
    <fullName>Song_Zone_Speeds__c</fullName>
    <label>Song Zone Speeds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>