force-app/main/default/objects/Song__c/fields/Spotify_Source_URL__c.field-meta.xml
<CustomField>
    <fullName>Spotify_Source_URL__c</fullName>
    <label>Spotify Source URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>