force-app/main/default/objects/Song__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suggested</fullName>
                <default>true</default>
                <label>Suggested</label>
            </value>
            <value>
                <fullName>Approved/Working</fullName>
            </value>
            <value>
                <fullName>Ready to Rock</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>