force-app/main/default/objects/Song__c/fields/Suggested_By__c.field-meta.xml
<CustomField>
    <fullName>Suggested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Suggested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Songs1</relationshipName>
    <type>Lookup</type>
</CustomField>