force-app/main/default/objects/Song__c/fields/Vote_Total__c.field-meta.xml
<CustomField>
    <fullName>Vote_Total__c</fullName>
    <label>Vote Total</label>
    <summarizedField>Song_Vote__c.Vote_Number__c</summarizedField>
    <summaryForeignKey>Song_Vote__c.Song__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>