force-app/main/default/objects/Song__c/fields/Zoom__c.field-meta.xml
<CustomField>
    <fullName>Zoom__c</fullName>
    <label>Zoom</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>