force-app/main/default/objects/Song__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Artist__c</columns>
    <columns>Status__c</columns>
    <columns>Suggested_By__c</columns>
    <columns>Chords__c</columns>
    <columns>Vote_Total__c</columns>
    <columns>Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>